[package]
name = "el2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarch64-cpu = "9.3"
tock-registers = "0.8.1"
cortex-a = "8.1.1"
log = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]
version = "0.1.0"
